[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/Main Screen.gd" type="Script" id=1]
[ext_resource path="res://resources/themes/FlatUI/kenneyUI.tres" type="Theme" id=2]

[node name="Main Screen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -314.5
margin_top = -44.0
margin_right = 314.5
margin_bottom = 44.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 629.0
margin_bottom = 42.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button_Log Fight" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 168.324
margin_bottom = 42.251
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Log new fight"

[node name="Button_Show Ranking" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 172.0
margin_right = 431.324
margin_bottom = 42.251
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Show Current Ranking"

[node name="Button_Add Fighter" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 435.0
margin_right = 629.324
margin_bottom = 42.251
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Add new fighter"

[node name="Button_Exit" type="Button" parent="VBoxContainer"]
margin_top = 46.0
margin_right = 629.0
margin_bottom = 88.251
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Exit"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button_Log Fight" to="." method="_on_Button_Log_Fight_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button_Show Ranking" to="." method="_on_Button_Show_Ranking_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button_Add Fighter" to="." method="_on_Button_Add_Fighter_pressed"]
[connection signal="pressed" from="VBoxContainer/Button_Exit" to="." method="_on_Button_Exit_pressed"]
